Only prod profile

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,5 @@
 os:
   - linux
-sudo: required
 services:
   - docker
 language: node_js
@@ -48,5 +47,5 @@ script:
   - $JHIPSTER_SCRIPTS/01-generate-project.sh
   - $JHIPSTER_SCRIPTS/02-generate-entities.sh
   - $JHIPSTER_SCRIPTS/03-docker-compose.sh
-  - $JHIPSTER_SCRIPTS/04-run-dev-profile.sh
+  # - $JHIPSTER_SCRIPTS/04-run-dev-profile.sh
   - $JHIPSTER_SCRIPTS/05-run-prod-profile.sh
