--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ services:
 language: node_js
 cache:
   directories:
-  - node_modules
+  - /home/travis/.nvm/versions/node/v4.1.2/lib/node_modules/
 node_js:
   - "4.1.2"
 jdk:
