--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,6 @@ os:
 services:
   - docker
 language: node_js
-sudo: false
-cache:
-  directories:
-  - /home/travis/.nvm/versions/node/v4.1.2/lib/node_modules/
 node_js:
   - "4.1.2"
 jdk:
@@ -19,18 +15,14 @@ env:
   - JHIPSTER_SAMPLES=$JHIPSTER_TRAVIS/samples
   - JHIPSTER_SCRIPTS=$JHIPSTER_TRAVIS/scripts
   matrix:
-  # - JHIPSTER_MODE=-Pdev   JHIPSTER=app-gradle
-  - JHIPSTER_MODE=-Pdev   JHIPSTER=app-mysql
+  - JHIPSTER_MODE=-Pdev   JHIPSTER=app-gradle
   - JHIPSTER_MODE=-Pprod  JHIPSTER=app-mysql
   - JHIPSTER_MODE=-Pprod  JHIPSTER=app-psql-es
   - JHIPSTER_MODE=-Pdev   JHIPSTER=app-mongodb
   - JHIPSTER_MODE=-Pdev   JHIPSTER=app-cassandra
-  # - JHIPSTER_MODE=-Pdev   JHIPSTER=app-oracle
-  # - JHIPSTER_MODE=-Pdev   JHIPSTER=app-websocket
-  # - JHIPSTER_MODE=-Pdev   JHIPSTER=app-noi18n
-  # - JHIPSTER_MODE=-Pdev   JHIPSTER=app-gulp
+  - JHIPSTER_MODE=-Pdev   JHIPSTER=app-gulp
+  - JHIPSTER_MODE=-Pdev   JHIPSTER=app-websocket-noi18n
 before_install:
-  - service --status-all
   - sudo service docker restart
   - sudo /etc/init.d/postgresql stop
 install:
@@ -38,24 +30,9 @@ install:
   - $JHIPSTER_INSTALL/02-docker-pull.sh
   - $JHIPSTER_INSTALL/03-install-jhipster-stack.sh
   - $JHIPSTER_INSTALL/04-downloadDep.sh
-  #--------------------------------------------------
-  # check version
-  #--------------------------------------------------
-  - java -version
-  - git --version
-  - yo --version
-  - mvn -v
-  - node -v
-  - npm -v
-  - bower -v
-  - grunt --version
-  - gulp -v
-  - grunt --version
-  - docker version
-  - docker-compose version
+  - $JHIPSTER_INSTALL/05-checkVersion.sh
 script:
   - $JHIPSTER_SCRIPTS/01-generate-project.sh
   - $JHIPSTER_SCRIPTS/02-generate-entities.sh
   - $JHIPSTER_SCRIPTS/03-docker-compose.sh
-  - $JHIPSTER_SCRIPTS/04-run-dev-profile.sh
-  # - $JHIPSTER_SCRIPTS/05-run-prod-profile.sh
+  - $JHIPSTER_SCRIPTS/04-run-profile.sh
