Add tests scripts

--- a/.travis.yml
+++ b/.travis.yml
@@ -35,4 +35,5 @@ script:
   - $JHIPSTER_SCRIPTS/01-generate-project.sh
   - $JHIPSTER_SCRIPTS/02-generate-entities.sh
   - $JHIPSTER_SCRIPTS/03-docker-compose.sh
-  - $JHIPSTER_SCRIPTS/04-run-profile.sh
+  - $JHIPSTER_SCRIPTS/04-tests.sh
+  - $JHIPSTER_SCRIPTS/05-run.sh
