Add new samples

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,12 +16,15 @@ env:
   - JHIPSTER_SCRIPTS=$JHIPSTER_TRAVIS/scripts
   matrix:
   - JHIPSTER_MODE=-Pdev   JHIPSTER=app-gradle
+  - JHIPSTER_MODE=-Pdev   JHIPSTER=app-default
   - JHIPSTER_MODE=-Pprod  JHIPSTER=app-mysql
   - JHIPSTER_MODE=-Pprod  JHIPSTER=app-psql-es
-  - JHIPSTER_MODE=-Pdev   JHIPSTER=app-mongodb
   - JHIPSTER_MODE=-Pdev   JHIPSTER=app-cassandra
+  - JHIPSTER_MODE=-Pdev   JHIPSTER=app-mongodb
   - JHIPSTER_MODE=-Pdev   JHIPSTER=app-gulp
-  - JHIPSTER_MODE=-Pdev   JHIPSTER=app-websocket-noi18n
+  - JHIPSTER_MODE=-Pdev   JHIPSTER=app-websocket
+  - JHIPSTER_MODE=-Pdev   JHIPSTER=app-noi18n
+  - JHIPSTER_MODE=-Pdev   JHIPSTER=app-oauth2
 before_install:
   - sudo service docker restart
   - sudo /etc/init.d/postgresql stop
