--- a/travis/samples/app-gradle/.yo-rc.json
+++ b/travis/samples/app-gradle/.yo-rc.json
@@ -8,15 +8,16 @@
     "clusteredHttpSession": "no",
     "websocket": "no",
     "databaseType": "sql",
-    "devDatabaseType": "h2Memory",
+    "devDatabaseType": "h2Disk",
     "prodDatabaseType": "mysql",
-    "useCompass": false,
+    "searchEngine": "no",
+    "useSass": false,
     "buildTool": "gradle",
     "frontendBuilder": "grunt",
-    "javaVersion": "8",
-    "rememberMeKey": "e48612ba1fd46fa7089fe9f5085d8d164b53ffb2",
-    "searchEngine": "no",
     "enableTranslation": true,
-    "useSass": false
+    "rememberMeKey": "0b557a1f94eb8ea76db0a95b5e8b64bec08bb869",
+    "testFrameworks": [
+      "gatling"
+    ]
   }
 }
