--- a/travis/samples/app-oauth2/.yo-rc.json
+++ b/travis/samples/app-oauth2/.yo-rc.json
@@ -1,21 +1,21 @@
 {
   "generator-jhipster": {
-    "baseName": "samplePsqlEs",
+    "baseName": "SampleOauth2",
     "packageName": "com.mycompany.myapp",
     "packageFolder": "com/mycompany/myapp",
-    "authenticationType": "session",
+    "authenticationType": "oauth2",
     "hibernateCache": "ehcache",
     "clusteredHttpSession": "no",
     "websocket": "no",
     "databaseType": "sql",
-    "devDatabaseType": "postgresql",
-    "prodDatabaseType": "postgresql",
+    "devDatabaseType": "h2Disk",
+    "prodDatabaseType": "mysql",
     "searchEngine": "no",
     "useSass": false,
     "buildTool": "maven",
     "frontendBuilder": "grunt",
     "enableTranslation": true,
-    "rememberMeKey": "efaf561e5400af2877060b33324f34288d671c97",
+    "rememberMeKey": "aa7cd1151a7181987d053a4a7e2667036abac16a",
     "testFrameworks": [
       "gatling"
     ]
