--- a/.travis.yml
+++ b/.travis.yml
@@ -39,4 +39,4 @@ script:
   - $JHIPSTER_SCRIPTS/02-generate-entities.sh
   - $JHIPSTER_SCRIPTS/03-tests.sh
   - $JHIPSTER_SCRIPTS/04-docker-compose.sh
-  # - $JHIPSTER_SCRIPTS/05-run.sh
+  - $JHIPSTER_SCRIPTS/05-run.sh
