--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ env:
   - JHIPSTER_SAMPLES=$JHIPSTER_TRAVIS/samples
   - JHIPSTER_SCRIPTS=$JHIPSTER_TRAVIS/scripts
   matrix:
-  - PROFILE=dev  JHIPSTER=app-gradle
+  - PROFILE=dev  JHIPSTER=app-gradle    RUNTASK=0
   - PROFILE=dev  JHIPSTER=app-default
   - PROFILE=prod JHIPSTER=app-mysql
   - PROFILE=prod JHIPSTER=app-psql-es
@@ -26,6 +26,7 @@ env:
   - PROFILE=dev  JHIPSTER=app-websocket
   - PROFILE=dev  JHIPSTER=app-noi18n
   - PROFILE=dev  JHIPSTER=app-oauth2
+  - PROFILE=dev  JHIPSTER=app-social
 before_install:
   - sudo service docker restart
   - sudo /etc/init.d/postgresql stop
