--- a/.travis.yml
+++ b/.travis.yml
@@ -41,3 +41,10 @@ script:
   - $JHIPSTER_SCRIPTS/03-tests.sh
   - $JHIPSTER_SCRIPTS/04-docker-compose.sh
   - $JHIPSTER_SCRIPTS/05-run.sh
+# notifications:
+#   webhooks:
+#     urls:
+#       - https://webhooks.gitter.im/e/c77e712c44b0a4914b7c
+#     on_success: always  # options: [always|never|change] default: always
+#     on_failure: always  # options: [always|never|change] default: always
+#     on_start: false     # default: false
